rework aggregates